Fix gallery overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1110,7 +1110,7 @@ nav[role=main] {
   .gallery .img-slot {
     width: 100%;
     height: 100%;
-    min-width: 30vw; }
+    min-width: 30%; }
   .gallery .img-slot-hidden {
     display: none; }
 
@@ -1126,7 +1126,7 @@ nav[role=main] {
   .gallery .img-slot-hidden {
     display: block; }
   .gallery .img-slot {
-    min-width: 25vw; } }
+    min-width: 25%; } }
 
 .about {
   background-color: #bcbdc0;
