--- a/sass/sections/_gallery.scss
+++ b/sass/sections/_gallery.scss
@@ -11,7 +11,7 @@
    .img-slot{
      width: 100%;
      height: 100%;
-     min-width: 30vw;
+     min-width: 30%;
    }
 
   .img-slot-hidden{ 
@@ -41,7 +41,7 @@
       display: block;
     }
     .img-slot{
-      min-width: 25vw;
+      min-width: 25%;
     }
   }
 }
